--- a/src/_includes/doc.njk
+++ b/src/_includes/doc.njk
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>{{title}}</title>
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet"> 
   <!-- component css START -->
   {% set css %}
     {% include "../components/css/content.css" %}
