feat: update prism styles

--- a/src/_includes/doc.njk
+++ b/src/_includes/doc.njk
@@ -16,7 +16,8 @@
   </style>
   <!-- component css END -->
   {% cssPath cssFile | safe %}
-  <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
+  {# <link href="https://raw.githubusercontent.com/PrismJS/prism-themes/master/themes/prism-vsc-dark-plus.css" rel="stylesheet"> #}
+  {# <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet"> #}
 </head>
 <body>
   <main class="[ fd-doc-layout ] [ fu-pl-xxl fu-pr-xxl fu-pt-xxxl fu-pb-xxxl fu-flow ]">
