--- a/src/assets/scss/ficus-docs.scss
+++ b/src/assets/scss/ficus-docs.scss
@@ -14,4 +14,5 @@
 @import 'direct-link';
 @import 'table-of-contents';
 @import 'component-container';
-@import 'tables'
+@import 'tables';
+@import 'prism'
