--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -88,8 +88,8 @@ hr {
   border-width: 1px 0 0;
 }
 
-/* Code element styles */
-code {
+/* Code elements that don't have a class get default styles */
+code:not([class]) {
   word-break: break-word;
   hyphens: manual;
   background-color: var(--gray-1-color);
