feat: add styling hooks docs
This is a WIP

--- a/src/assets/scss/_component-container.scss
+++ b/src/assets/scss/_component-container.scss
@@ -17,5 +17,6 @@
 
 code[class*="language-"],
 pre[class*="language-"] {
-  margin-top: var(--spacer-xl) !important
+  margin-top: var(--spacer-xl) !important;
+  margin-bottom: var(--spacer-xl) !important
 }
