feat: add svg logos

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -33,7 +33,8 @@
     <div class="fd-main-layout">
       <header class="fc-navbar">
         <section class="fc-navbar__section">
-          <img src="../assets/img/logo.png" width="150" alt="FicusJS Components">
+          <img id="ficus-logo" src="../assets/img/ficus-logo.svg" width="150" alt="FicusJS Components">
+          <img id="ficus-logo-white" src="../assets/img/ficus-logo-white.svg" width="150" alt="FicusJS Components" style="display: none;">
         </section>
         <section class="fc-navbar__section">
           <a href="..." class="fc-button fc-button--link">Docs</a>
