--- a/src/assets/scss/ficus-docs.scss
+++ b/src/assets/scss/ficus-docs.scss
@@ -15,4 +15,5 @@
 @import 'table-of-contents';
 @import 'component-container';
 @import 'tables';
-@import 'prism'
+@import 'prism';
+@import 'theme-toggle'
