--- a/src/assets/scss/_table-of-contents.scss
+++ b/src/assets/scss/_table-of-contents.scss
@@ -17,7 +17,7 @@
   }
 
   ol {
-    padding-left: var(--spacer-md);
+    padding-left: var(--spacing-md);
     list-style: none;
   }
 
@@ -25,8 +25,8 @@
     display: block;
     color: var(--body-color);
     text-decoration: none;
-    padding-top: calc(var(--spacer-sm) / 2);
-    padding-bottom: calc(var(--spacer-sm) / 2);
+    padding-top: calc(var(--spacing-sm) / 2);
+    padding-bottom: calc(var(--spacing-sm) / 2);
   }
 
   a:focus,
