--- a/src/components/css/content.css
+++ b/src/components/css/content.css
@@ -1,21 +1,21 @@
 .fc-content {
-  --flow-space: var(--spacer-md);
+  --flow-space: var(--spacing-md);
 }
 
 .fc-content h1:not(:first-of-type) {
-  --flow-space: var(--spacer-xxl);
+  --flow-space: var(--spacing-xxl);
 }
 
 .fc-content h2 {
-  --flow-space: var(--spacer-xl);
+  --flow-space: var(--spacing-xl);
 }
 
 .fc-content h3 {
-  --flow-space: var(--spacer-lg);
+  --flow-space: var(--spacing-lg);
 }
 
 .fc-content h4,
 .fc-content h5
 .fc-content h6 {
-  --flow-space: var(--spacer-md);
+  --flow-space: var(--spacing-md);
 }
