--- a/src/components/css/form-label.css
+++ b/src/components/css/form-label.css
@@ -1,6 +1,6 @@
 .fc-form__label {
   display: inline-block;
-  margin-bottom: calc(var(--form-spacer) / 2);
+  margin-bottom: calc(var(--form-spacing) / 2);
   font-weight: 600;
 }
 .fc-form__label.fc-form__label--block {
@@ -10,7 +10,7 @@
 /* reverse label */
 .fc-form__input--reverse .fc-form__label {
   margin-bottom: 0;
-  margin-left: calc(var(--form-spacer) / 2);
+  margin-left: calc(var(--form-spacing) / 2);
 }
 
 [label][required] label.fc-form__label::after,
