--- a/src/components/css/form.css
+++ b/src/components/css/form.css
@@ -1,5 +1,5 @@
 .fc-form {
-  --form-spacer: var(--spacer-md);
+  --form-spacing: var(--spacing-md);
   --form-primary-color-rgb: rgb(29, 66, 138);
   --form-primary-shadow-color: rgba(29, 66, 138, 0.25);
   --form-invalid-color-rgb: rgb(220, 53, 69);
@@ -9,11 +9,11 @@
   --form-input-border-color: #e3e3e3;
   --form-input-border: 1px solid #e3e3e3;
   --form-input-border-radius: 0.125rem;
-  --form-input-padding: calc(var(--form-spacer) / 2) var(--form-spacer);
+  --form-input-padding: calc(var(--form-spacing) / 2) var(--form-spacing);
   --form-input-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   --form-input-focus-border-width: calc(var(--form-input-border-width) * 2);
   --form-input-focus-border-color: rgba(29, 66, 138, 0.75);
-  --form-input-focus-padding: calc((var(--form-spacer) / 2) - var(--form-input-border-width)) calc(var(--form-spacer) - var(--form-input-border-width));
+  --form-input-focus-padding: calc((var(--form-spacing) / 2) - var(--form-input-border-width)) calc(var(--form-spacing) - var(--form-input-border-width));
   --form-input-box-shadow-offsets: 0 0 0 0.2rem;
   --form-submit-bg-color: rgb(29, 66, 138);
   --form-submit-color: rgb(255, 255, 255);
@@ -21,18 +21,18 @@
   display: block;
 }
 .fc-form__group {
-  margin-bottom: var(--form-spacer);
+  margin-bottom: var(--form-spacing);
 }
 .fc-form__group.fc-form__group--rc {
-  margin-bottom: calc(var(--form-spacer) / 2);
+  margin-bottom: calc(var(--form-spacing) / 2);
 }
 .fc-form__group.fc-form__group--inline {
   display: inline-block;
-  margin-right: calc(var(--form-spacer) / 2);
-  margin-bottom: calc(var(--form-spacer) / 2);
+  margin-right: calc(var(--form-spacing) / 2);
+  margin-bottom: calc(var(--form-spacing) / 2);
 }
 .fc-form__invalid-feedback {
-  margin-top: calc(var(--form-spacer) / 4);
+  margin-top: calc(var(--form-spacing) / 4);
   color: var(--form-invalid-color-rgb);
   font-size: 80%;
 }
