--- a/src/components/css/navigation.css
+++ b/src/components/css/navigation.css
@@ -7,7 +7,7 @@
   display: block;
   color: var(--fc-nav-anchor-color-link, var(--body-color));
   text-decoration: none;
-  padding: var(--fc-nav-anchor-sizing-padding, var(--spacer-sm));
+  padding: var(--fc-nav-anchor-sizing-padding, var(--spacing-sm));
 }
 
 .fc-nav__list a:focus,
@@ -20,5 +20,5 @@
 /* compact nav */
 
 .fc-nav.fc-nav--compact .fc-nav__list a {
-  --fc-nav-anchor-sizing-padding: calc(var(--spacer-sm) / 2);
+  --fc-nav-anchor-sizing-padding: calc(var(--spacing-sm) / 2);
 }
