--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -3,9 +3,9 @@
   @each $color, $value in $global-colors {
     --#{$color}-color: #{$value};
   }
-  // spacers
-  @each $spacer, $value in $spacers {
-    --spacer-#{$spacer}: #{$value};
+  // spacings
+  @each $spacing, $value in $spacings {
+    --spacing-#{$spacing}: #{$value};
   }
   // fonts
   @each $font, $value in $font-families {
