--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -98,25 +98,25 @@ $font-weights: (
 // Spacing
 // -------
 
-$spacer-unit: 1rem;
-$spacer-none: 0;
-$spacer-sm: 0.5 * $spacer-unit;
-$spacer-md: $spacer-unit;
-$spacer-lg: 1.5 * $spacer-unit;
-$spacer-xl: 2 * $spacer-unit;
-$spacer-xxl: 3 * $spacer-unit;
-$spacer-xxxl: 5 * $spacer-unit;
-$spacers: (
-  none: $spacer-none,
-  sm: $spacer-sm,
-  md: $spacer-md,
-  lg: $spacer-lg,
-  xl: $spacer-xl,
-  xxl: $spacer-xxl,
-  xxxl: $spacer-xxxl
+$spacing-unit: 1rem;
+$spacing-none: 0;
+$spacing-sm: 0.5 * $spacing-unit;
+$spacing-md: $spacing-unit;
+$spacing-lg: 1.5 * $spacing-unit;
+$spacing-xl: 2 * $spacing-unit;
+$spacing-xxl: 3 * $spacing-unit;
+$spacing-xxxl: 5 * $spacing-unit;
+$spacings: (
+  none: $spacing-none,
+  sm: $spacing-sm,
+  md: $spacing-md,
+  lg: $spacing-lg,
+  xl: $spacing-xl,
+  xxl: $spacing-xxl,
+  xxxl: $spacing-xxxl
 );
 
-$negative-spacers: negativify-map($spacers) !default;
+$negative-spacings: negativify-map($spacings) !default;
 
 $border-radius: 2px;
 
