--- a/src/components/css/content.css
+++ b/src/components/css/content.css
@@ -1,21 +1,21 @@
 .fc-content {
-  --flow-space: var(--spacing-md);
+  --flow-space: var(--spacing-05);
 }
 
 .fc-content h1:not(:first-of-type) {
-  --flow-space: var(--spacing-xxl);
+  --flow-space: var(--spacing-09);
 }
 
 .fc-content h2 {
-  --flow-space: var(--spacing-xl);
+  --flow-space: var(--spacing-07);
 }
 
 .fc-content h3 {
-  --flow-space: var(--spacing-lg);
+  --flow-space: var(--spacing-06);
 }
 
 .fc-content h4,
 .fc-content h5
 .fc-content h6 {
-  --flow-space: var(--spacing-md);
+  --flow-space: var(--spacing-05);
 }
