--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -45,9 +45,9 @@
         <iframe id="comp-frame" src="components/" frameborder="0" name="comp-frame"></iframe>
       </main>
 
-      <div class="[ fd-sidebar ] [ fu-pt-xxl fu-pb-xxl ]">
-        <h2 class="fu-text-sm fu-text-transform-uppercase fu-mb-sm fu-ml-xl fu-mr-xl">Getting started</h2>
-        <nav class="[ fc-nav ] [ fu-mb-xl fu-ml-lg fu-mr-lg ]">
+      <div class="[ fd-sidebar ] [ fu-pt-09 fu-pb-09 ]">
+        <h2 class="fu-text-sm fu-text-transform-uppercase fu-mb-03 fu-ml-07 fu-mr-07">Getting started</h2>
+        <nav class="[ fc-nav ] [ fu-mb-07 fu-ml-06 fu-mr-06 ]">
           <ul class="fc-nav__list">
             {%- for post in collections.gettingStarted -%}
               <li>
@@ -56,8 +56,8 @@
             {%- endfor -%}
           </ul>
         </nav>
-        <h2 class="fu-text-sm fu-text-transform-uppercase fu-mb-sm fu-ml-xl fu-mr-xl">Custom elements</h2>
-        <nav class="[ fc-nav ] [ fu-mb-xl fu-ml-lg fu-mr-lg ]">
+        <h2 class="fu-text-sm fu-text-transform-uppercase fu-mb-03 fu-ml-07 fu-mr-07">Custom elements</h2>
+        <nav class="[ fc-nav ] [ fu-mb-07 fu-ml-06 fu-mr-06 ]">
           <ul class="fc-nav__list">
             {%- for post in collections.customElements -%}
               <li>
@@ -66,8 +66,8 @@
             {%- endfor -%}
           </ul>
         </nav>
-        <h2 class="fu-text-sm fu-text-transform-uppercase fu-mb-sm fu-ml-xl fu-mr-xl">HTML</h2>
-        <nav class="[ fc-nav ] [ fu-ml-lg fu-mr-lg ]">
+        <h2 class="fu-text-sm fu-text-transform-uppercase fu-mb-03 fu-ml-07 fu-mr-07">HTML</h2>
+        <nav class="[ fc-nav ] [ fu-ml-06 fu-mr-06 ]">
           <ul class="fc-nav__list">
             {%- for post in collections.html -%}
               <li>
