--- a/src/components/css/form.css
+++ b/src/components/css/form.css
@@ -1,5 +1,5 @@
 .fc-form {
-  --form-spacing: var(--spacing-md);
+  --form-spacing: var(--spacing-05);
   --form-primary-color-rgb: rgb(29, 66, 138);
   --form-primary-shadow-color: rgba(29, 66, 138, 0.25);
   --form-invalid-color-rgb: rgb(220, 53, 69);
