feat: add layout scale spacing

--- a/src/_includes/doc.njk
+++ b/src/_includes/doc.njk
@@ -20,7 +20,7 @@
   {# <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet"> #}
 </head>
 <body>
-  <main class="[ fd-doc-layout ] [ fu-pl-09 fu-pr-09 fu-pt-09 fu-pb-09 fu-flow ]">
+  <main class="[ fd-doc-layout ] [ fu-layout-pl-04 fu-layout-pr-04 fu-layout-pt-06 fu-layout-pb-06 fu-flow ]">
     <article class="[ fd-doc-article ] [ fu-flow ]">
       {{ content | safe }}
       {% bootstrap modulePath | safe %}
