--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -96,6 +96,9 @@ $font-weights: (
 );
 
 // Spacing
+// Use the spacing scale when building individual components.
+// It includes small increments needed to create appropriate spatial relationships for detail-level designs.
+// This scale is applied and used within all Carbon components.
 // -------
 
 $spacing-unit: 1rem;
@@ -123,6 +126,33 @@ $spacings: (
 );
 
 $negative-spacings: negativify-map($spacings) !default;
+
+// Layout spacing
+// The layout scale is used for arranging components and other UI parts into a full page layout.
+// It has larger increments that are used to control the density of a design.
+// Use the smaller layout tokens to create more dense compositions and direct relationships.
+// Use the larger tokens to increase the amount of white space and to disassociate sections.
+// --------------
+
+$layout-unit: 1rem;
+$layout-01: $layout-unit;
+$layout-02: 1.5 * $layout-unit;
+$layout-03: 2 * $layout-unit;
+$layout-04: 3 * $layout-unit;
+$layout-05: 4 * $layout-unit;
+$layout-06: 6 * $layout-unit;
+$layout-07: 10 * $layout-unit;
+$layouts: (
+  '01': $layout-01,
+  '02': $layout-02,
+  '03': $layout-03,
+  '04': $layout-04,
+  '05': $layout-05,
+  '06': $layout-06,
+  '07': $layout-07
+);
+
+$negative-layouts: negativify-map($layouts) !default;
 
 $border-radius: 2px;
 
