feat: add spacing docs

--- a/src/assets/scss/_doc-layout.scss
+++ b/src/assets/scss/_doc-layout.scss
@@ -42,6 +42,10 @@
     --flow-space: var(--spacing-09);
   }
 
+  table {
+    --flow-space: var(--spacing-07);
+  }
+
   & > :not(pre):not(table):not(.fd-component-container):not(hr) {
     max-width: 42rem;
   }
