--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -6,36 +6,58 @@
 // ------------
 
 $white: #fff !default;
-$gray-50: #fafafa !default;
-$gray-100: #dddddd !default;
-$gray-200: #c0c0c0 !default;
-$gray-300: #a4a4a4 !default;
-$gray-400: #898989 !default;
-$gray-500: #6f6f6f !default;
-$gray-600: #565656 !default;
-$gray-700: #3e3e3e !default;
-$gray-800: #272727 !default;
-$gray-900: #121212 !default;
+$gray-10: #fafafa !default;
+$gray-20: #dddddd !default;
+$gray-30: #c0c0c0 !default;
+$gray-40: #a4a4a4 !default;
+$gray-50: #898989 !default;
+$gray-60: #6f6f6f !default;
+$gray-70: #565656 !default;
+$gray-80: #3e3e3e !default;
+$gray-90: #272727 !default;
+$gray-100: #121212 !default;
 $black: #000 !default;
 $grays: (
   'white': $white,
-  'gray-50': $gray-100,
+  'gray-10': $gray-10,
+  'gray-20': $gray-20,
+  'gray-30': $gray-30,
+  'gray-40': $gray-40,
+  'gray-50': $gray-50,
+  'gray-60': $gray-60,
+  'gray-70': $gray-70,
+  'gray-80': $gray-80,
+  'gray-90': $gray-90,
   'gray-100': $gray-100,
-  'gray-200': $gray-200,
-  'gray-300': $gray-300,
-  'gray-400': $gray-400,
-  'gray-500': $gray-500,
-  'gray-600': $gray-600,
-  'gray-700': $gray-700,
-  'gray-800': $gray-800,
-  'gray-900': $gray-900,
   'black': $black
 );
 
-$primary: #54e4e5 !default;
-$secondary: #63e48b !default;
+$primary-10: #b6f3f4 !default;
+$primary-20: #9df0f0 !default;
+$primary-30: #85ecec !default;
+$primary-40: #6ce8e9 !default;
+$primary-50: #54e4e5 !default;
+$primary-60: #48c3c4 !default;
+$primary-70: #3ca3a4 !default;
+$primary-80: #308283 !default;
+$primary-90: #246262 !default;
+$primary-100: #184141 !default;
+$primary: $primary-50 !default;
+
+$secondary-10: #bcf3cd !default;
+$secondary-20: #a6f0bd !default;
+$secondary-30: #90ecac !default;
+$secondary-40: #79e89c !default;
+$secondary-50: #63e48b !default;
+$secondary-60: #55c377 !default;
+$secondary-70: #47a363 !default;
+$secondary-80: #39824f !default;
+$secondary-90: #2a623c !default;
+$secondary-10: #1c4128 !default;
+$secondary: $secondary-50 !default;
+
 $body-bg: $white !default;
-$body-color: $gray-900 !default;
+$body-color: $gray-100 !default;
 $border-color: rgba($black, .1);
 $colors: (
   'primary': $primary,
@@ -217,7 +239,7 @@ $enable-dark-mode: true !default;
 
 $dm-primary: #54e4e5 !default;
 $dm-secondary: #63e48b !default;
-$dm-body-bg: $gray-900 !default;
+$dm-body-bg: $gray-100 !default;
 $dm-body-color: $white !default;
 $dm-border-color: rgba($white, .1);
 $dm-colors: (
@@ -238,7 +260,7 @@ $dm-colors: (
 
 
 // components
-$dm-component-bg: $gray-900;
+$dm-component-bg: $gray-100;
 $dm-component-color: $white;
 $dm-component-border-color: $dm-border-color;
 $dm-component-border-radius: 2px;
